[package]
name = "faer_gmres"
description = "GMRES implementation using faer"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/wgurecky/faer-gmres"
homepage = "https://github.com/wgurecky/faer-gmres"
keywords = ["faer", "math", "gmres", "sparse"]
license = "MIT"
readme = "readme.md"
exclude = [".github/","examples/"]

[lib]
name = "faer_gmres"
path = 'src/lib.rs'

[dependencies]
assert_approx_eq = "1.1.0"
num-traits = "0.2.18"
rayon = "*"
# faer = {version = "0.21.3", features=["unstable"]}
faer = {git = "https://github.com/wgurecky/faer-rs", branch = "sparse_as_ref", features=["unstable"]}
# faer = {path = "../faer-rs/faer/", features=["unstable"]}
# faer-traits = "0.21.0"
faer-traits = {git = "https://github.com/wgurecky/faer-rs", branch = "sparse_as_ref"}
# faer-traits = {path = "../faer-rs/faer-traits/"}
reborrow = "0.5.5"
